# DaxPDAC2012

./: CMakeLists.txt  DaxPDAC2012.bib  DaxPDAC2012.tex  IEEECopyrightForm.doc  sig-alternate.cls  timings.csv
timings/logs/: notes-2012-09-27.txt  notes-2012-10-30.txt  piston-threshold_geometry.h  pistoncompare-2012-11-5-2.csv  pistoncompare-2012-11-5-2.txt  pistoncompare-2012-11-5-all.txt  pistoncompare-2012-11-5.csv  pistoncompare-2012-11-5.txt  pv_log-2012-10-30.txt  pv_log-2012-11-05.txt  timings-2012-09-27.csv  timings-2012-10-30.csv  timings-2012-11-05.csv  timings-2012-11-05.txt  timings-2012-11-20.csv  timings-2012-11-20.txt
timings/pistoncompare/: CMakeLists.txt  README  pistoncompare.h  pistoncompare_cuda.cu  pistoncompare_openmp.cxx
timings/thresholdexample/: CMakeLists.txt  README  runtests.sh.in  thresholdexample.h  thresholdexample_cuda.cu  thresholdexample_openmp.cxx  thresholdexample_openmp1.cxx  thresholdexample_serial.cxx  thresholdexample_tbb.cxx  thresholdexample_tbb1.cxx
